--- a/.gitignore
+++ b/.gitignore
@@ -53,8 +53,8 @@ captures/
 *.jks
 *.keystore
 
-# Google Services (e.g. APIs or Firebase)
-# google-services.json
+Google Services (e.g. APIs or Firebase)
+google-services.json
 
 # Android Patch
 gen-external-apklibs
