--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Google Button
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.1.0'
 
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -86,6 +90,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt "com.github.bumptech.glide:compiler:4.12.0"
     kapt 'android.arch.lifecycle:compiler:1.1.1'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Indicator for ViewPager
     implementation 'com.tbuonomo:dotsindicator:4.2'
