new features implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,9 @@ dependencies {
     //Youtube
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
+    // Koin
+    implementation 'io.insert-koin:koin-android:3.1.2'
+
 
 
 
