--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
     </queries>
 
     <application
+        android:name=".application.MyApp"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@drawable/brflixlogo"
